# CNN-Fear-n-Greed-Scraper

./: .gitignore  20_12_30_Fear_and_Greed.py  20_12_30_Fear_and_Greed.py.py  21_01_12 FearnGreed Viewer.py  Dockerfile  Fear_and_Greed.csv  README.md  pyproject.toml
.github/workflows/: docker.yml
fng-collector/: Dockerfile  config.py  docker-compose.yml  main.py  scraper.py  storage.py
src/fng-collector/: scraper.py
tests/: test_scraper_live.py  test_storage.py
